--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
     <%= csrf_meta_tag %>
   </head>
   <body>
-    <%= render 'layouts/header'%>
-    <hr>
-    <%= yield %>
+    <div class="container">
+      <%= render 'layouts/header'%>
+      <hr>
+      <%= yield %>
+    </div>
   </body>
 </html>
