--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -6,6 +6,7 @@
   <%=search_field_tag(:word,params[:word],:class=>"input-medium search-query")%>
   <button type="submit" name="search">Search</button>
   <button type="submit" name="like">Like</button>
+  <button type="submit" name="index">index</button>
   <span style="padding-left:30px;"><a href="/notes/new">New</a></span>
 <%end%>
 
