--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -6,6 +6,7 @@
     <textarea id="names" name="names" rows="3" style="width:800px;"><%=@names.join("\n")%></textarea>
   </fieldset>
   <%=submit_tag 'Save'%>
+  <%=submit_tag 'Save without reindex',:name=>"no_reindex" if !@note.new_record?%>
   <%=link_to_function 'Tab2Space',"tab2space()"%>
   <%=link_to 'Delete',note_path(@note),:method=>'delete',:confirm =>'Are you sure?' if @method == 'put'%>
 <%end%>
